# rustify

./: .env.example  Cargo.toml  dev.sh
dev/: Dockerfile  docker-entrypoint.sh  init.sql
migrations/: 20250305162252_administrator.sql  20250310175615_log.sql
src/: env.rs  main.rs  seed.rs
src/config/: database.rs  mod.rs  runtime.rs  server.rs  setup.rs  state.rs
src/core/: mod.rs
src/core/administrator/: controller.rs  handler.rs  mod.rs  model.rs  repository.rs  route.rs
src/core/auth/: controller.rs  handler.rs  mod.rs  model.rs  route.rs
src/enum/: message.rs  mod.rs  role.rs
src/error/: handler.rs
src/log/: handler.rs  mod.rs  model.rs  repository.rs
src/middleware/: guard.rs
src/model/: response.rs
src/service/: bcrypt.rs  mod.rs
