[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres", "chrono"] }
sqlx-core = "0.8.3"
dotenv = "0.15.0"
env_logger = "0.11.6"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
jsonwebtoken = "9.3.1"
rand = "0.9.0"
once_cell = "1.20.3"
sha2 = "0.10.8"
bcrypt = "0.17.0"
tokio = { version = "1.43.0", features = ["full"] }
lazy_static = "1.5.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"